--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3460,7 +3460,6 @@
                     selectedEpisode: null,
                     showEmptyPopup: false,
                     showMangaButtons: false,
-                    selectedEpisodeNumberFromUrl: null,
                     filterBlackOrganization: false,
                     filterDetectiveBoys: false,
                     filterScaryEpisodes: false,
@@ -9808,7 +9807,8 @@
                     //alert("Opening episode: " + episodeCode); // Debugging line
                     const episodeNumber = parseInt(episodeCode, 10);
                     console.log("Episode Number:", episodeNumber); // Log the episode number being used
-                    this.openModal(episodeNumber);
+                    this.selectedEpisode = episodeNumber;
+                    this.showModal = true;
                 },
             },    
 
