--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -19,7 +19,7 @@
 
             if (result.valid) {
                 localStorage.setItem(localStorageKey, telegramUserId);
-                // User is valid, show the original content (hide the "not joined" message)
+                // User is valid, show the original content (hide the "not joined" message).
             } else {
                 localStorage.removeItem(localStorageKey);
                 // User is not valid, show the "not joined" message
