--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -19,7 +19,7 @@
 
             if (result.valid) {
                 localStorage.setItem(localStorageKey, telegramUserId);
-                // User is valid, show the original content (hide the "not joined" message).
+                // User is valid, show the original content (hide the "not joined" message)
             } else {
                 localStorage.removeItem(localStorageKey);
                 // User is not valid, show the "not joined" message
@@ -9806,16 +9806,8 @@
                 openSpecificEpisode(episodeCode) {
                     const episodeNumber = parseInt(episodeCode, 10);
                     console.log("Episode Number:", episodeNumber); // Log the episode number being used
-
-                    // Ensure episodes is populated before searching
-                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
-                    
-                    if (episode) {
                         this.showModal = true; // Show the modal
-                        this.selectedEpisode = episode; // Set the selected episode object
-                    } else {
-                        console.log("Episode not found!");
-                    }
+                        this.selectedEpisode = episodeNumber; // Set the selected episode object
                 },
             },    
 
