--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9806,8 +9806,16 @@
                 openSpecificEpisode(episodeCode) {
                     const episodeNumber = parseInt(episodeCode, 10);
                     console.log("Episode Number:", episodeNumber); // Log the episode number being used
+
+                    // Ensure episodes is populated before searching
+                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
+                    
+                    if (episode) {
+                        this.selectedEpisode = episode; // Set the selected episode object
                         this.showModal = true; // Show the modal
-                        this.selectedEpisode = episodeNumber; // Set the selected episode object
+                    } else {
+                        console.log("Episode not found!");
+                    }
                 },
             },    
 
