--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9804,19 +9804,10 @@
                 },
 
                 openSpecificEpisode(episodeCode) {
-                    const episodeNumber = parseInt(episodeCode, 10);
-                    console.log("Episode Number:", episodeNumber); // Log the episode number being used
-
-                    // Ensure episodes is populated before searching
-                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
-                    
-                    if (episode) {
-                        this.selectedEpisode = episode; // Set the selected episode object
-                        this.showModal = true; // Show the modal
-                    } else {
-                        console.log("Episode not found!");
-                    }
+                    this.selectedEpisode.EpisodeNumber = episodeCode;
+                    this.showModal = true; // Open the modal for the selected episode
                 },
+
             },    
 
             mounted() {
