--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9805,7 +9805,7 @@
 
                 openSpecificEpisode(episodeCode) {
                     // Loop through the episodes to find the matching one
-                    const epi = this.paginatedEpisodes.find(ep => ep.EpisodeNumber === episodeCode);
+                    const epi = this.paginatedEpisodes.find(ep => ep === episodeCode);
 
                     if (epi) {
                         this.openModal(epi); // Open the modal with the selected episode
