--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9840,7 +9840,7 @@
 
                 // Ensure data is loaded before calling openSpecificEpisode
                 const urlParams = new URLSearchParams(window.location.search);
-                const episodeCode = urlParams.get("start")?.split('=')[1];  // Extract the episode number from the URL
+                const episodeCode = urlParams.get("code");
 
                 if (episodeCode && this.episodes && this.episodes.length > 0) {
                     this.openSpecificEpisode(episodeCode); // Open the episode if data is loaded
