--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3216,39 +3216,6 @@
                                     </div>
                                 </fieldset>
 
-                                <div
-                                    v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === 'error')"
-                                    class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50"
-                                >
-                                    <div class="bg-white rounded-xl shadow-lg p-6 w-80 text-center">
-                                        <h2 class="text-lg font-bold mb-4">حدث خطأ</h2>
-                                        <p class="text-sm text-gray-700 mb-4">
-                                            تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه،
-                                            وذلك بالضغط على زر 'Start' أو 'بدء' كما هو موضح في الصورة 👇.
-                                            إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
-                                        </p>
-                                        <img
-                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
-                                            alt="Error Hint"
-                                            class="mb-4 w-full rounded"
-                                        />
-                                        <div class="flex justify-between">
-                                            <a
-                                                href="https://t.me/DCRef_bot"
-                                                class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
-                                            >
-                                                أضغط هنا للذهاب إلى البوت
-                                            </a>
-                                            <button
-                                                @click="clearError()"
-                                                class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400"
-                                            >
-                                                إغلاق
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-
                                 <p v-if="selectedEpisode && selectedEpisode.EpisodeSeason !== ''" class="mb-2 text-lg">
                                     <span>الموسم: </span>{{ selectedEpisode.EpisodeSeason }} ({{ selectedEpisode.EpisodeSeasonCount }} حلقة)
                                 </p>
@@ -3419,6 +3386,36 @@
                         </div>
                     </div>
             </table>
+
+            <div v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === 'error')" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
+                <div class="bg-white rounded-xl shadow-lg p-6 w-80 text-center">
+                    <h2 class="text-xl text-red-500 font-bold mb-4">حدث خطأ</h2>
+                    <p class="text-sm text-gray-700 mb-4">
+                        تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه،
+                        وذلك بالضغط على زر 'Start' أو 'بدء' كما هو موضح في الصورة 👇.
+                        إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
+                    </p>
+                    <img
+                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
+                        alt="Error Hint"
+                        class="mb-4 w-full rounded"
+                    />
+                    <div class="flex justify-between">
+                        <a
+                            href="https://t.me/DCRef_bot"
+                            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
+                        >
+                            أضغط هنا للذهاب إلى البوت
+                        </a>
+                        <button
+                            @click="clearError()"
+                            class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400"
+                        >
+                            إغلاق
+                        </button>
+                    </div>
+                </div>
+            </div>
 
 
             <!-- Pagination Controls -->
@@ -9816,6 +9813,10 @@
                         this.selectedEpisode.EpisodeMangasIDs[index].status = 'success';
                     } catch (error) {
                         this.selectedEpisode.EpisodeMangasIDs[index].status = 'error';
+                        // Skip timeout reset if the error popup is active
+                        if (this.selectedEpisode.EpisodeMangasIDs.some((manga) => manga.status === "error")) {
+                            return; // Exit early if error popup is shown
+                        }
                     }
                     setTimeout(() => {
                         this.selectedEpisode.EpisodeMangasIDs[index].status = null;
