--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3388,19 +3388,21 @@
             </table>
 
             <div v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === 'error')" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
-                <div class="bg-white rounded-xl shadow-lg p-6 w-80 text-center">
-                    <h2 class="text-xl text-red-500 font-bold mb-4">حدث خطأ</h2>
-                    <p class="text-sm text-gray-700 mb-4">
+                <div class="bg-cyan-900 rounded-xl shadow-lg p-6 w-80 text-center">
+                    <h2 class="text-2xl text-red-500 font-bold mb-4">حدث خطأ</h2>
+                    <p class="text-lg text-gray-700 font-bold mb-4">
                         تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه،
                         وذلك بالضغط على زر 'Start' أو 'بدء' كما هو موضح في الصورة 👇.
-                        إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
                     </p>
                     <img
                         src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
                         alt="Error Hint"
                         class="mb-4 w-full rounded"
                     />
-                    <div class="flex justify-between">
+                    <p class="text-lg font-bold text-gray-700 mt-4">
+                        إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
+                    </p>
+                    <div class="flex justify-between font-bold">
                         <a
                             href="https://t.me/DCRef_bot"
                             class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
