--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3387,10 +3387,19 @@
                     </div>
             </table>
 
-            <div v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === 'error')" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
-                <div class="bg-cyan-900 rounded-xl shadow-lg p-6 w-80 text-center">
-                    <h2 class="text-2xl text-red-500 font-bold mb-4">حدث خطأ</h2>
-                    <p class="text-lg text-gray-700 font-bold mb-4">
+            <div
+                v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === 'error')"
+                class="fixed z-10 inset-0 overflow-y-auto bg-black bg-opacity-50 flex items-center justify-center"
+                >
+                <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
+                    <!-- Sticky Header Section -->
+                    <div class="sticky top-0 z-50 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
+                    <h2 class="text-2xl text-red-500 font-bold text-center">حدث خطأ</h2>
+                    </div>
+
+                    <!-- Scrollable Content -->
+                    <div class="overflow-y-auto p-4 flex-1">
+                    <p class="text-lg text-white font-bold mb-4">
                         تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه،
                         وذلك بالضغط على زر 'Start' أو 'بدء' كما هو موضح في الصورة 👇.
                     </p>
@@ -3402,19 +3411,22 @@
                     <p class="text-lg font-bold text-gray-700 mt-4">
                         إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
                     </p>
-                    <div class="flex justify-between font-bold">
-                        <a
-                            href="https://t.me/DCRef_bot"
-                            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
-                        >
-                            أضغط هنا للذهاب إلى البوت
-                        </a>
-                        <button
-                            @click="clearError()"
-                            class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400"
-                        >
-                            إغلاق
-                        </button>
+                    </div>
+
+                    <!-- Footer Section -->
+                    <div class="p-4 bg-cyan-900 flex justify-between">
+                    <a
+                        href="https://t.me/DCRef_bot"
+                        class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700"
+                    >
+                        أضغط هنا للذهاب إلى البوت
+                    </a>
+                    <button
+                        @click="clearError()"
+                        class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400"
+                    >
+                        إغلاق
+                    </button>
                     </div>
                 </div>
             </div>
