--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3408,7 +3408,7 @@
                         alt="Error Hint"
                         class="mb-4 w-full rounded"
                     />
-                    <p class="text-lg text-white font-bold text-center text-gray-700 mt-4">
+                    <p class="text-lg text-white font-bold text-center mt-4">
                         إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
                     </p>
                     </div>
