--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3229,8 +3229,7 @@
                                         <!-- Scrollable Content -->
                                         <div class="overflow-y-auto p-4 flex-1">
                                         <p class="text-lg text-white text-center font-bold mb-4">
-                                            تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه،
-                                            وذلك بالضغط على زر 'Start' أو 'بدء' كما هو موضح في الصورة 👇
+                                            تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه، وذلك بالضغط على زر 'Start' أو 'Restart' أو 'بدء' كما هو موضح في الصورة 👇
                                         </p>
                                         <img
                                             src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/error_hint.png"
