--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3222,13 +3222,13 @@
                                     >
                                     <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
                                         <!-- Sticky Header Section -->
-                                        <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
-                                            <h2 class="text-2xl text-red-500 font-bold text-center" style="z-index: 0;">حدث خطأ</h2>
+                                        <div class="sticky top-0 bg-cyan-900 z-0 pt-4 pl-4 pr-4 pb-2">
+                                            <h2 class="text-2xl text-red-500 font-bold text-center">حدث خطأ</h2>
                                         </div>
 
                                         <!-- Scrollable Content -->
                                         <div class="overflow-y-auto p-4 flex-1">
-                                        <p class="text-lg text-white text-center font-bold mb-4">
+                                        <p class="text-lg text-white  text-center font-bold mb-4">
                                             تأكد من أن البوت لديه صلاحية إرسال الرسائل لك من خلال اشتراكك فيه، وذلك بالضغط على زر 'Start' أو 'Restart' أو 'بدء' كما هو موضح في الصورة 👇
                                         </p>
                                         <img
