--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9878,13 +9878,20 @@
                 },
 
                 clearError() {
-                // Reset the status of mangas with 'error' to null
-                this.selectedEpisode.EpisodeMangasIDs.forEach((manga) => {
-                    if (manga.status === "error") {
-                        manga.status = null;
-                    }
-                });
-            },
+                    // Reset the status of mangas with 'error' to null
+                    this.selectedEpisode.EpisodeMangasIDs.forEach((manga) => {
+                        if (manga.status === "error") {
+                            manga.status = null;
+                        }
+                    });
+
+                    // Reset the status of videos with 'error' to null
+                    this.selectedEpisode.EpisodeVideosIDs.forEach((video) => {
+                        if (video.status === "error") {
+                            video.status = null;
+                        }
+                    });
+                },
 
             },    
 
