--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9878,19 +9878,23 @@
                 },
 
                 clearError() {
-                    // Reset the status of mangas with 'error' to null
-                    this.selectedEpisode.EpisodeMangasIDs.forEach((manga) => {
-                        if (manga.status === "error") {
-                            manga.status = null;
-                        }
-                    });
+                    // Check if selectedEpisode and EpisodeMangasIDs exist, then reset the status of mangas with 'error'
+                    if (this.selectedEpisode?.EpisodeMangasIDs) {
+                        this.selectedEpisode.EpisodeMangasIDs.forEach((manga) => {
+                            if (manga.status === "error") {
+                                manga.status = null;
+                            }
+                        });
+                    }
 
-                    // Reset the status of videos with 'error' to null
-                    this.selectedEpisode.EpisodeVideosIDs.forEach((video) => {
-                        if (video.status === "error") {
-                            video.status = null;
-                        }
-                    });
+                    // Check if selectedEpisode and EpisodeVideosIDs exist, then reset the status of videos with 'error'
+                    if (this.selectedEpisode?.EpisodeVideosIDs) {
+                        this.selectedEpisode.EpisodeVideosIDs.forEach((video) => {
+                            if (video.status === "error") {
+                                video.status = null;
+                            }
+                        });
+                    }
                 },
 
             },    
