--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5160,7 +5160,9 @@
                         })
                         .filter(episode =>
                             new RegExp(searchQuery, 'i').test(episode.EpisodeTitle) ||
-                            new RegExp(searchQuery, 'i').test(episode.EpisodeNumber)
+                            new RegExp(searchQuery, 'i').test(episode.EpisodeNumber) ||
+                            new RegExp(searchQuery, 'i').test(episode.EpisodeStory) ||
+                            new RegExp(searchQuery, 'i').test(episode.EpisodeSummary)
                         );
                 },
 
