--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -8409,6 +8409,8 @@
                     this.showModal = false;
                     this.selectedEpisode = null;
                     this.spoilerVisible = false;
+                    this.selectedEpisode.EpisodeVideosIDs[index].status = null;
+                    this.selectedEpisode.EpisodeMangasIDs[index].status = null;
                 },
 
                 openEmptyPopup() {
