--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -8407,10 +8407,21 @@
                 },
                 closeModal() {
                     this.showModal = false;
+                    // Reset status for all videos and mangas when closing modal
+                    if (this.selectedEpisode) {
+                        if (this.selectedEpisode.EpisodeVideosIDs) {
+                            this.selectedEpisode.EpisodeVideosIDs.forEach((video, index) => {
+                                this.selectedEpisode.EpisodeVideosIDs[index].status = null;
+                            });
+                        }
+                        if (this.selectedEpisode.EpisodeMangasIDs) {
+                            this.selectedEpisode.EpisodeMangasIDs.forEach((manga, index) => {
+                                this.selectedEpisode.EpisodeMangasIDs[index].status = null;
+                            });
+                        }
+                    }
                     this.selectedEpisode = null;
                     this.spoilerVisible = false;
-                    this.EpisodeVideosIDs.status = null;
-                    this.EpisodeMangasIDs.status = null;
                 },
 
                 openEmptyPopup() {
