--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1,65 +1,114 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+    <!-- Include the Telegram WebApp script -->
+<script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+
 <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-        const webApp = window.Telegram.WebApp;
-        const telegramUserId = webApp.initDataUnsafe.user.id;
-        const localStorageKey = 'AreTheUserJoinToTheChannel';
+  // Wrap your initialization logic in a function.
+  async function initApp() {
+    const webApp = window.Telegram.WebApp;
+    // Get the Telegram user id.
+    const telegramUserId = webApp.initDataUnsafe.user.id;
+    const localStorageKey = 'AreTheUserJoinToTheChannel';
 
-        try {
-            const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ token: telegramUserId })
-            });
+    try {
+      // Validate the user (for example, check if the user joined the channel).
+      const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ token: telegramUserId })
+      });
+      const result = await response.json();
 
-            const result = await response.json();
+      if (result.valid) {
+        // If valid, store the token and (re)initialize your page content.
+        localStorage.setItem(localStorageKey, telegramUserId);
+        // --- Place here the code that shows your “normal” content ---
+        // For example, if you’re using Vue, you may want to mount or update your component,
+        // or simply remove any error overlays.
+        document.body.innerHTML = `
+          <div id="app">
+            <!-- Your normal content goes here -->
+            <h1 style="text-align:center; margin-top:20px;">مرحبا بك!</h1>
+          </div>
+        `;
+        // If using Vue, you could also call a function like initVueApp() here.
+      } else {
+        // If the user is not joined, remove the token and show the "not joined" message.
+        localStorage.removeItem(localStorageKey);
+        showNotJoinedMessage();
+      }
+    } catch (error) {
+      console.error("Error during validation:", error);
+      localStorage.removeItem(localStorageKey);
+      showErrorMessage();
+    }
+  }
 
-            if (result.valid) {
-                localStorage.setItem(localStorageKey, telegramUserId);
-                // User is valid, show the original content (hide the "not joined" message)
-            } else {
-                localStorage.removeItem(localStorageKey);
-                // User is not valid, show the "not joined" message
-                document.body.innerHTML = `
-                    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
-                        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                            <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">لست منضماً إلى القناة.<br>
-                                <span style="font-size: 26px; font-weight: bold; color: #ffffff;">الرجاء الانضمام</span>
-                                <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a>
-                            </h1>
-                            <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
-                                أعد المحاولة
-                            </button>
-                        </div>
-                    </div>
-                `;
-                document.getElementById('retryButton').addEventListener('click', () => {
-                    window.location.reload();
-                });
-            }
-        } catch (error) {
-            console.error("Error during validation:", error);
-            localStorage.removeItem(localStorageKey);
-            // Show error message with retry button
-            document.body.innerHTML = `
-                <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
-                    <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                        <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">حدث خطأ في فتح الدليل.</h1>
-                        <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 20px;">الرجاء المحاولة لاحقاً.</h1>
-                        <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
-                            أعد المحاولة
-                        </button>
-                    </div>
-                </div>
-            `;
-            document.getElementById('retryButton').addEventListener('click', () => {
-                window.location.reload();
-            });
-        }
+  // Run our initialization function when the DOM content is loaded.
+  document.addEventListener("DOMContentLoaded", async () => {
+    await initApp();
+  });
+
+  // Function to display the “not joined” message.
+  function showNotJoinedMessage() {
+    document.body.innerHTML = `
+      <div style="display: flex; justify-content: center; align-items: center; height: 100vh;
+                  background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
+        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px;
+                    background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+                    animation: slideDown 1s;">
+          <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
+            لست منضماً إلى القناة.<br>
+            <span style="font-size: 26px; font-weight: bold; color: #ffffff;">الرجاء الانضمام</span>
+            <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer"
+               style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">
+               من هنا
+            </a>
+          </h1>
+          <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3);
+                                          color: #fff; border: none; border-radius: 5px; cursor: pointer;
+                                          font-size: 18px; font-weight: bold; margin-top: 20px;
+                                          transition: transform 0.3s, box-shadow 0.3s;">
+            أعد المحاولة
+          </button>
+        </div>
+      </div>
+    `;
+    // Instead of reloading the page, attach an event listener that calls initApp().
+    document.getElementById('retryButton').addEventListener('click', async () => {
+      await initApp();
     });
+  }
+
+  // Function to display a generic error message.
+  function showErrorMessage() {
+    document.body.innerHTML = `
+      <div style="display: flex; justify-content: center; align-items: center; height: 100vh;
+                  background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
+        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px;
+                    background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+                    animation: slideDown 1s;">
+          <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">
+            حدث خطأ في فتح الدليل.
+          </h1>
+          <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 20px;">
+            الرجاء المحاولة لاحقاً.
+          </h1>
+          <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3);
+                                          color: #fff; border: none; border-radius: 5px; cursor: pointer;
+                                          font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
+            أعد المحاولة
+          </button>
+        </div>
+      </div>
+    `;
+    // Attach the retry event listener here as well.
+    document.getElementById('retryButton').addEventListener('click', async () => {
+      await initApp();
+    });
+  }
 </script>    
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
